# FinTech

./: .gitignore  LICENSE
fin_backend/: .gitignore  manage.py  pyproject.toml
fin_backend/apps/users/: apps.py  managers.py  models.py  services.py
fin_backend/apps/users/api/: serializers.py  urls.py  views.py
fin_backend/apps/users/migrations/: 0001_initial.py
fin_backend/core/: urls.py  wsgi.py
fin_backend/core/settings/: base.py  local.py  production.py
fin_front/: ARCHITECTURE.md  README.md  analysis_options.yaml  pubspec.yaml
fin_front/android/app/: build.gradle.kts
fin_front/android/app/src/main/: AndroidManifest.xml
fin_front/android/app/src/main/kotlin/com/example/fin_front/: MainActivity.kt
fin_front/ios/Runner/: Info.plist
fin_front/ios/Runner.xcodeproj/: project.pbxproj
fin_front/lib/: main.dart
fin_front/lib/src/core/router/: app_router.dart  app_routes.dart  router_notifier.dart
fin_front/lib/src/features/onboarding/presentation/pages/: onboarding_page.dart
fin_front/linux/: CMakeLists.txt
fin_front/linux/runner/: my_application.cc
fin_front/macos/Runner.xcodeproj/: project.pbxproj
fin_front/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
fin_front/macos/Runner/Configs/: AppInfo.xcconfig
fin_front/test/: widget_test.dart
fin_front/web/: index.html  manifest.json
fin_front/windows/: CMakeLists.txt
fin_front/windows/runner/: Runner.rc  main.cpp
fintech_backend/: pyproject.toml
