
[project]
name = "fintech-backend"
version = "0.1.0"
description = "High-performance Fintech API"
authors = [
    {name = "amir-beigi-84", email = "toxic.amir09@gmail.com"}
]
# Changed to 3.12 (3.14 is not released yet). 3.12+ is rock solid for production.
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=6.0.4,<7.0.0",
    "django-ninja>=1.6.2,<2.0.0",
    "psycopg[binary]>=3.2.1,<4.0.0", # Psycopg 3: Faster, async-ready, modern standard
    "python-decouple>=3.8,<4.0",
    "django-cors-headers>=4.9.0,<5.0.0",
    "argon2-cffi>=25.1.0,<26.0.0",
    "pyjwt>=2.8.0,<3.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-django>=4.8.0,<5.0.0",
    "faker>=24.0.0,<30.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "django-stubs[compatible-mypy]>=4.2.0" # Mandatory for Django type-checking
]

# ==========================================
# ELITE TOOLING CONFIGURATIONS
# ==========================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E, W: PEP8 errors/warnings
# F: Pyflakes
# I: Isort (import sorting)
# B: Flake8-bugbear (finds common bugs)
# S: Flake8-bandit (automated security testing!)
select = ["E", "W", "F", "I", "B", "S", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Ignore security warnings for hardcoded passwords in tests
"tests/*" = ["S106", "S105"]
# Ignore unused imports in __init__.py
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["venv", ".venv", "migrations"]

[tool.django-stubs]
django_settings_module = "src.config.settings.base"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.config.settings.base"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --reuse-db" # Speeds up tests significantly
